        2.6.16.27-0.9 (SLES 10)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.9-42.0.10.EL (RHEL 4)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.39.cfs7
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * bug fixes

Severity   : normal
Frequency  : rare
Bugzilla   : 12696
Description: ASSERTION(imp->imp_conn_current) failed
Details    : an assertion failure is hit if a client node boots and attempts to
	     mount a lustre filesystem faster than RECONNECT_INTERVAL seconds.

Severity   : normal
Frequency  : only for i686
Bugzilla   : 12695
Description: 1.4.11 RC1 build fails for RHEL 4, i686
Details    : Fixed config variable for build.

Severity   : normal
Frequency  : rare
Bugzilla   : 12415
Description: Updated patchess for new RHEL4 kernel
Details    : Updated patch inode-nr_unused-2.6.9-rhel4.patch
	     Updated patch jbd-stats-2.6.9.patch
	     Updated patch qsnet-rhel4-2.6.patch
	     Updated patch quota-deadlock-on-pagelock-core.patch
	     Updated patch vfs_intent-2.6-rhel4.patch
	     Updated patch vfs_races-2.6-rhel4.patch
	     Updated series file 2.6-rhel4-titech.series
	     Updated series file 2.6-rhel4.series
	     Updated kernel config files

Severity   : normal
Frequency  : rare
Bugzilla   : 12374
Description: lquota slave complains LBUG when reconnecting with mds
             or failover in mds.
Details    : quota slave depends qctxt->lqc_import to send its quota request.
             This pointer will be invalid if mds did failover or broke its
             connect to osts, which leads to LBUG.

Severity   : normal	
Frequency  : when qunit size is too small(less than 20M)
Bugzilla   : 12588
Description: write is stopped by improper -EDQUOT
Details    : If the master is busy and qunit size is small enough(let's say 1M), 
	     the slave can not get quota from master on time, which will lead 